<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ac.stiki.doleno.mayom.AboutActivity"
    android:layout_marginBottom="20dp"
    android:background="@drawable/bg">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="About Us"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="197dp"
        android:innerRadius="0dp"
        android:padding="9dp"
        android:shape="ring"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="9dp"
                    android:gravity="start|center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Supported by :"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/image_stiki"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_gravity="center"
                        android:layout_margin="14dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/stiki" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="2dp"
                        android:text="STIKI Malang"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Jl Raya Tidar no 100 Malang"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/stiki_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="14dp"
                        android:text="@string/stiki_link"
                        android:textSize="12sp"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="9dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="By :"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/image_mon"
                        android:layout_width="90dp"
                        android:layout_height="107dp"
                        android:layout_gravity="center"
                        android:layout_margin="14dp"
                        android:layout_marginBottom="12dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/mon" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:layout_marginBottom="2dp"
                        android:text="Monica Tifani Zahara"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Find me on LinkedIn"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/mon_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/mon_link"
                        android:textSize="12sp"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="start"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="12dp"
                        android:scaleType="center"
                        android:src="@drawable/logo_mayo" />

                    <TextView
                        android:id="@+id/ket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:ems="2"
                        android:layout_marginLeft="2dp"
                        android:text="@string/keterangan"
                        android:textStyle="normal">

                    </TextView>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>